created header section

--- a/src/template.html
+++ b/src/template.html
@@ -3,12 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo List</title>
+    <title>WeatherApp</title>
 </head>
 <body>
    
-
-
+    <header>
     
+        <div id="brand">
+            <div id="brand-logo">
+                <img id="logo" src="./images/logo_black.jpg" alt="">
+            </div>
+            <div id="brand-name">
+                <h2>WeatherApp</h2>
+            </div>
+        </div>
+
+        <div id="location">
+            <span>My Location, temp</span>
+            <div id="search-bar">
+                <img id="search-icon" src="./images/search.svg" alt="search icon">
+                <form action="">
+                    <input id="location-input" type="text" placeholder="City" required>
+                </form>
+            </div>
+        </div>
+
+    </header>
+
+    <div id="content"></div>
+
+    <footer></footer>
+
 </body>
 </html>
