added current location and temp placeholder to header

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeatherApp</title>
+    <title>MyWeatherApp</title>
 </head>
 <body>
    
@@ -14,7 +14,7 @@
                 <img id="logo" src="./images/logo_black.jpg" alt="">
             </div>
             <div id="brand-name">
-                <h2>WeatherApp</h2>
+                <h2>MyWeatherApp</h2>
             </div>
         </div>
 
