updated header for displaying current location temp

--- a/src/template.html
+++ b/src/template.html
@@ -19,7 +19,10 @@
         </div>
 
         <div id="location">
-            <span>My Location, temp</span>
+            <p>
+                <span id="current_location"></span>, <span id="current_temperature"></span> 
+                °C
+            </p>            
             <div id="search-bar">
                 <img id="search-icon" src="./images/search.svg" alt="search icon">
                 <form action="">
