implemented current weather panel creation

--- a/src/template.html
+++ b/src/template.html
@@ -20,8 +20,8 @@
 
         <div id="location">
             <p>
-                <span id="current_location"></span>, <span id="current_temperature"></span> 
-                °C
+                <span id="current_location"></span> | <span id="current_temperature"></span> 
+                <span id="temp-units">°C</span>
             </p>            
             <div id="search-bar">
                 <img id="search-icon" src="./images/search.svg" alt="search icon">
