created temperature toggle switch eleemtn

--- a/src/template.html
+++ b/src/template.html
@@ -33,6 +33,15 @@
 
     </header>
 
+    <div id="banner">
+        <span id="celcius">°C</span>
+        <label class="switch">
+            <input id="temp-toggle" type="checkbox">
+            <span class="slider"></span>
+        </label>
+        <span id="farenheit">°F</span>
+    </div>
+
     <div id="content"></div>
 
     <footer></footer>
