added styling for temperature toggle

--- a/src/template.html
+++ b/src/template.html
@@ -34,7 +34,7 @@
     </header>
 
     <div id="banner">
-        <span id="celcius">°C</span>
+        <span id="celcius" class="toggled">°C</span>
         <label class="switch">
             <input id="temp-toggle" type="checkbox">
             <span class="slider"></span>
