implemented form submission for new locations

--- a/src/template.html
+++ b/src/template.html
@@ -24,9 +24,8 @@
                 <span id="temp-units"></span>
             </p>            
             <div id="search-bar">
-                <!-- <img id="search-icon" src="./images/search.svg" alt="search icon"> -->
                 <form action="">
-                    <button type="submit"> <img id="search-icon" src="./images/search.svg" alt="search icon"></button>
+                    <button type="submit"> <img id="search-icon" src="./images/search.svg" alt=""></button>
                     <label>
                         <input id="location-input" type="text" placeholder="City" required>
                     </label>
